[BTWCT-1086] - added transparent border to stop navigation elements from appearing to shifting down

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -52,7 +52,7 @@ nav.cmp-navigation {
 
             &:hover {
                cursor: pointer;
-               border-top: 3px solid $color-gray-50;
+               border-top: 3px solid transparent;
             }
 
             &::after {
